feat: sécurisation complète des réservations avec JWT et contrôle d'accès
- Ajout CurrentUserService pour extraire l'utilisateur courant depuis le SecurityContext
- Contrôle d'accès RS-01 à RS-05 : 401 sans token, 403 si ADHERENT sur DELETE,
  filtrage automatique par propriétaire, identité extraite du token JWT (pas du body)
- Rôles ADHERENT/BIBLIOTHECAIRE remplaçant Admin/User
- Clé JWT déplacée dans la variable d'environnement JWT_SECRET
- docker-compose.yml avec PostgreSQL et JWT_SECRET
- init_data.sql mis à jour avec les nouveaux rôles
- 28 tests unitaires (ReservationServiceTest) + 25 tests d'intégration (ReservationControllerIntegrationTest)
- Rapport securite.md documentant l'architecture de sécurité

🤖 Generated with Codebuff
Co-Authored-By: Codebuff <noreply@codebuff.com>